Margin size changed.

--- a/css/css.css
+++ b/css/css.css
@@ -3,7 +3,7 @@
 	display:flex;
 	border:2px solid black;
 	flex-direction:row;
-	margin:290px;
+	margin:250px;
 	justify-content:center;
 	margin-top:50px;
 }
@@ -12,35 +12,37 @@
 	display:flex;
 	flex-direction:column;
 	background-color:black;
+	width:435px;
+	height:330px;;
 }
 .template .split1 .split11
 {
 	display:flex;
 	flex-direction:column;
-	margin:5px;
-	margin-left:100px;
-	margin-right:100px;
 }
 .template .split1 .split11 .dark
 {
 	height:40px;
 	width:180px;
 	background-color:white;
-	margin:5px;
-	margin-left:45px;
+	margin:0px auto;
+	margin-top:100px;
+	margin-bottom:10px;
 }
 .template .split1 .split11 .text
 {
 	height:20px;
 	width:150px;
 	background-color:white;
-	margin:5px;
-	margin-left:60px;
+	margin:0px auto;
+	margin-top:10px;
+	margin-bottom:10px;
 }
 .template .split1 .split12
 {
 	display:flex;
 	flex-direction:row;
+	justify-content:center;
 }
 .template .split1 .split12 .tb
 {
@@ -48,7 +50,6 @@
 	width:120px;
 	background-color:white;
 	margin:5px;
-	margin-left:140px;
 }
 .template .split1 .split12 .button
 {
@@ -65,19 +66,22 @@
 }
 .template .split2 .button1
 {
-	height:20px;
+	height:50px;
 	width:50px;
 	background-color:white;
-	margin:5px;
-	margin-left:300px;
-	margin-top:30px;
+	margin:30px;
+	margin-left:350px;
+	border-radius:50px;
+	text-align:center;
 }
 .template .split2 .button
 {
-	height:20px;
+	height:50px;
 	width:50px;
 	background-color:white;
-	margin:5px;
-	margin-left:300px;
+	margin:30px;
+	margin-left:350px;
+	border-radius:50px;
+	text-align:center;
 }
 
